neon/css/app.css
/* ... */
#search-form-colls {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 2fr;
      grid-template-columns: 1fr 2fr;
  grid-gap: 10px;
}

#search-form-colls ul {
  list-style-type: none;
  padding-left: 20px;
}

#search-form-locality {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
      grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
}

#search-form-locality ul {
  list-style-type: none;
  padding-left: 20px;
}

#search-form-latlong {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr 1fr;
      grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 10px;
}

#search-form-coll-event {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
      grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
  justify-items: center;
}

#search-form-sample {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 1fr;
      grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
  
}

.errors {
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  padding: 15px;
  pointer-events: none;
}

.errors .error {
  padding: 15px;
  border-radius: 4px;
  background-color: rgba(230, 20, 20, 0.8);
  color: #FFF;
  font-size: 14px;
  -webkit-transform: translateY(300px);
          transform: translateY(300px);
  pointer-events: all;
  margin-bottom: 10px;
  -webkit-animation: slide-in 1s ease-out forwards;
          animation: slide-in 1s ease-out forwards;
}

@-webkit-keyframes slide-in {
  to {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
  }
}

@keyframes slide-in {
  to {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
  }
}

/* ==============================
   LAYOUT STYLES
   @mixin ============================= */
/* COLOR BOXES */
span.text-color {
  color: #444444;
  background-color: #444444;
  line-height: 0.5em;
}

span.text-color-lighter {
  color: #939292;
  background-color: #939292;
  line-height: 0.5em;
}

span.h-color {
  color: #444444;
  background-color: #444444;
  line-height: 0.5em;
}

span.link-color {
  color: #005DAB;
  background-color: #005DAB;
  line-height: 0.5em;
}

span.accent-color {
  color: #005DAB;
  background-color: #005DAB;
  line-height: 0.5em;
}

span.accent-color-darker {
  color: #002D74;
  background-color: #002D74;
  line-height: 0.5em;
}

/* CHIPS */
.chip {
  display: inline-block;
  background: #e0e0e0;
  padding: 0 12px;
  margin: 5px 0;
  border-radius: 10px;
  font-size: 13px;
}

.chip:hover {
  background: #ccc;
}

.chip, .chip-icon {
  height: auto;
  line-height: auto;
}

.chip-icon {
  display: block;
  float: left;
  background: #005DAB;
  width: auto;
  line-height: auto !important;
  border-radius: 50%;
  text-align: center;
  color: white;
  margin: 0 8px 0 -12px;
}

.chip-remove-btn {
  display: inline-block;
  background: #aaa;
  border: 0;
  height: 20px;
  width: 20px;
  border-radius: 50%;
  padding: 0;
  margin: 0 -4px 0 4px;
  cursor: pointer;
  font: inherit;
  line-height: 20px;
  text-transform: uppercase;
  background-color: #005dab !important;
  transition: background-color 250mscubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250mscubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250mscubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition-property: background-color, box-shadow, border;
  transition-duration: 250ms, 250ms, 250ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1),cubic-bezier(0.4, 0, 0.2, 1),cubic-bezier(0.4, 0, 0.2, 1);
  transition-delay: 0ms, 0ms, 0ms;
}

.chip-remove-btn:after {
  color: #e0e0e0;
  content: 'x';
}

.chip-remove-btn:hover {
  background: #999;
}

.chip-remove-btn:active {
  background: #777;
}

.btn {
  color: #ffffff;
  background-color: #002D74;
  display: inline-block;
  position: relative;
  cursor: pointer;
  height: 35px;
  line-height: 35px;
  padding: 0 1.5rem;
  font-size: 16px;
  font-weight: 600;
  letter-spacing: .8px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: none;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  border-radius: 2px;
  -webkit-transition: all .3s ease-out;
  transition: all .3s ease-out;
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.225);
          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.225);
}

.btn:hover {
  color: #ffffff;
  background-color: #0041a7;
  text-decoration: none;
  -webkit-box-shadow: 0 4px 10px 0px rgba(0, 0, 0, 0.225);
          box-shadow: 0 4px 10px 0px rgba(0, 0, 0, 0.225);
}

.btn-icon {
  display: block;
  float: left;
  width: 35px;
  line-height: 35px !important;
  border-radius: 50%;
  text-align: center;
  color: white;
  margin: 0 8px 0 -12px;
}

/* Accordions ********************************************************************************/
/* Dependencies: Material Design Icons */
.accordions input.accordion-selector {
  display: none;
}

.accordions label.accordion-header {
  font-size: 16px;
  text-transform: uppercase;
  font-weight: 600;
  text-align: center;
  display: block;
  padding: 8px 22px;
  margin: 0 0 1px 0;
  cursor: pointer;
  background-color: #ffffff;
  border-radius: 2px;
  border: 1px solid #0073cf;
  color: #0073cf;
  -webkit-transition: ease .5s;
  transition: ease .5s;
  position: relative;
}

.accordions label.accordion-header:hover {
  background: #e6e6e6;
}

.accordions label.accordion-header::after {
  font-family: "Material Icons";
  font-size: 24px;
  content: "\e313";
  position: absolute;
  right: 20px;
  bottom: 1px;
}

.accordions .content {
  background: #ffffff;
  padding: 10px 25px;
  border: 1px solid #d7d9d9;
  margin: -1px 0 10px 0;
  border-radius: 2px;
}

.accordions .accordion-selector + label + .content {
  display: none;
  opacity: 0;
  height: 0;
  padding: 0 25px;
  -webkit-transition: ease-in-out .2s;
  transition: ease-in-out .2s;
}
/* ... */

